--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,5 +8,9 @@ spring:
 
    password: 123456
 
-
-
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
+    servlet:
+      content-type: text/html
+    cache: false
