--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,7 @@
 spring:
-
   datasource:
-
    url: jdbc:mysql://192.168.131.1:3306/estate?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-
    username: root
-
    password: 123456
 
   thymeleaf:
@@ -14,3 +10,12 @@ spring:
     servlet:
       content-type: text/html
     cache: false
+jwt:
+  tokenHeader: Authorization #JWT存储的请求头
+  secret: mySecret #JWT加解密使用的密钥
+  expiration: 604800 #JWT的超期限时间(60*60*24)
+  tokenHead: Bearer  #JWT负载中拿到开头
+mybatis:
+  mapper-locations:
+    - classpath:dao/*.xml
+
