--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,6 @@ jwt:
   expiration: 604800 #JWT的超期限时间(60*60*24)
   tokenHead: Bearer  #JWT负载中拿到开头
 mybatis:
-  mapper-locations:
-    - classpath:dao/*.xml
+  mapper-locations: classpath:mapper/*.xml
+
 
