--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-   url: jdbc:mysql://192.168.131.1:3306/estate?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+   url: jdbc:mysql://localhost:3306/estate?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
    username: root
-   password: 123456
+   password: root123456
 
   thymeleaf:
     prefix: classpath:/templates/
@@ -18,4 +18,7 @@ jwt:
 mybatis:
   mapper-locations: classpath:mapper/*.xml
 
-
+server:
+  servlet:
+    context-path: /
+  port: 8082
